# zeroGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.zig  build.zig.zon  color.c  color.cpp  color.h  commands.txt  draw.c  draw.cpp  draw.h  imgui.ini  index.html  main.c  main.cpp  object3D.c  object3D.cpp  object3D.h  objloader.h  simplerenderer.h  test.c  vectors.c  vectors.cpp  vectors.h  zerogl.h
assets/: cube.mtl  light.mtl
assets/engineer/: engineer.mtl
assets/snake/: snake.mtl
assets/woodcube/: woodcube.mtl
docs/: index.html
